<resources>
    <!-- NYT API Key -->
    <string name="nyt_api_key" translatable="false">79267985f9cc49558b809254d951d64c</string>

    <!-- App-related strings -->
    <string name="app_name" translatable="false">MyNews</string>
    <string name="app_icon">App icon</string>

    <!-- Navigation drawer strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="all_categories">All categories</string>

    <!-- Actions strings -->
    <string name="action_notifications" translatable="false">Notifications</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_webview" translatable="false">WebView</string>
    <string name="action_result">Result</string>

    <!-- API Names -->
    <string name="top_stories">Top Stories</string>
    <string name="most_popular">Most Popular</string>

    <!-- Empty list placeholder -->
    <string name="text_empty">No results</string>

    <!-- MainActivity strings -->
    <string name="urlcopied">Article url copied into your clipboard.</string>

    <!-- SearchActivity strings -->
    <string name="search_query_terms">Search query term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="missing_parameters">There are missing parameters.</string>

    <!-- NotificationActivity strings -->
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="notification_keywords">Key words triggering the notification (separated by space)</string>
    <string name="notification_text">There is %1$d new articles about your %2$d selected subjects.</string>
    <string name="nocategory">No category</string>

    <!-- HelpActivity strings -->
    <string name="app_help">Here are some tips to help you use the app : </string>
    <string-array
        name="string_array_help">
        <item>• Checkboxes in Notifications page generates dedicated tabs in the main page.</item>
        <item>• Long press on an article line to copy its url in your clipboard.</item>
        <item>• If you don\'t specify dates for your research, it will search from the beginning of the NYT until today.</item>
        <item>• You can access to all the application pages via the drawer menu on the left of the main page.</item>
    </string-array>

    <!-- AboutActivity strings -->
    <string name="app_about">MyNews is a open-source news application using the New York Times API. It is a project realised by Mickaël Hernandez for the Android formation of OpenClassrooms.</string>
    <string name="see_on_github">See on GitHub</string>
    <string name="github_link">https://github.com/Lun4rDev/MyNews</string>
</resources>