<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
           android:id="@+id/nav_activities">
        <item
            android:id="@+id/item_search"
            android:title="@string/action_search"
            android:icon="@android:drawable/ic_menu_search"/>
        <item
            android:id="@+id/item_notifications"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/action_notifications"/>
        <item
            android:id="@+id/item_help"
            android:title="@string/action_help"
            android:icon="@android:drawable/ic_menu_help"/>
        <item
            android:id="@+id/item_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/action_about"/>
    </group>

    <group android:checkableBehavior="single"
           android:id="@+id/nav_default">
        <item
            android:id="@+id/item_mostpopular"
            android:title="@string/most_popular"/>
        <item
            android:id="@+id/item_topstories"
            android:title="@string/top_stories"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_sections">
    </group>


</menu>
