<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_query_terms"
        android:inputType="textPersonName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/search_begin_date"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/begin_date"
            android:onClick="showBeginDatePickerDialog"/>

        <TextView
            android:id="@+id/search_end_date"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/end_date"
            android:onClick="showEndDatePickerDialog"/>
    </LinearLayout>

    <GridLayout
        android:id="@+id/search_checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2">
    </GridLayout>
    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/action_search"
        android:textColor="#FFF"/>

</LinearLayout>